// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base/Member/Drawer/AddMemberGroup should render add member group form with all fields 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-i0wf7l"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  添加成员组
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="name"
                        title="成员组名"
                      >
                        成员组名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="name"
                            placeholder="请输入成员组名"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="userUids"
                        title="用户名"
                      >
                        用户名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-show-arrow ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <div
                                class="ant-select-selection-overflow"
                              >
                                <div
                                  class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                                  style="opacity: 1;"
                                >
                                  <div
                                    class="ant-select-selection-search"
                                    style="width: 0px;"
                                  >
                                    <input
                                      aria-activedescendant="userUids_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="userUids_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="userUids_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="userUids"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-selection-search-mirror"
                                    >
                                       
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择用户名
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <h1
                  class="ant-typography member-form-sub-title css-1eepp70"
                >
                  管理员设置
                </h1>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="isProjectAdmin"
                        title="是否为项目管理员"
                      >
                        是否为项目管理员
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            aria-checked="false"
                            class="ant-switch basic-switch-wrapper css-g6dhbn"
                            id="isProjectAdmin"
                            role="switch"
                            type="button"
                          >
                            <div
                              class="ant-switch-handle"
                            />
                            <span
                              class="ant-switch-inner"
                            >
                              <span
                                class="ant-switch-inner-checked"
                              />
                              <span
                                class="ant-switch-inner-unchecked"
                              />
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <h1
                      class="ant-typography member-form-sub-title css-1eepp70"
                    >
                      项目管理权限
                    </h1>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-checkbox-group css-svmyig"
                                id="projectManagementPermission"
                              >
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700001"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    创建项目
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700003"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    数据源管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700010"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    成员管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700015"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    审批流程管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="20100"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    修改项目
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="20150"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    删除项目
                                  </span>
                                </label>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <h1
                      class="ant-typography member-form-sub-title css-1eepp70"
                    >
                      项目操作权限
                    </h1>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                class="ant-btn ant-btn-default member-form-add-button basic-button-wrapper css-9l31jd"
                                type="button"
                              >
                                <span
                                  class="ant-btn-icon"
                                >
                                  <svg
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7 13.667A6.667 6.667 0 1 1 7 .334a6.667 6.667 0 0 1 0 13.333m-.667-7.334H3.668v1.334h2.667v2.666h1.333V7.667h2.667V6.333H7.667V3.667H6.334z"
                                      fill="#4583FF"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  添加项目操作权限
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`base/Member/Drawer/AddMemberGroup should send add member group request when click submit button 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-i0wf7l"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  添加成员组
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="name"
                        title="成员组名"
                      >
                        成员组名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="name"
                            placeholder="请输入成员组名"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="userUids"
                        title="用户名"
                      >
                        用户名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-show-arrow ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <div
                                class="ant-select-selection-overflow"
                              >
                                <div
                                  class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                                  style="opacity: 1;"
                                >
                                  <div
                                    class="ant-select-selection-search"
                                    style="width: 0px;"
                                  >
                                    <input
                                      aria-activedescendant="userUids_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="userUids_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="userUids_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="userUids"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-selection-search-mirror"
                                    >
                                       
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择用户名
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <h1
                  class="ant-typography member-form-sub-title css-1eepp70"
                >
                  管理员设置
                </h1>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="isProjectAdmin"
                        title="是否为项目管理员"
                      >
                        是否为项目管理员
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            aria-checked="false"
                            class="ant-switch basic-switch-wrapper css-g6dhbn"
                            id="isProjectAdmin"
                            role="switch"
                            type="button"
                          >
                            <div
                              class="ant-switch-handle"
                            />
                            <span
                              class="ant-switch-inner"
                            >
                              <span
                                class="ant-switch-inner-checked"
                              />
                              <span
                                class="ant-switch-inner-unchecked"
                              />
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <h1
                      class="ant-typography member-form-sub-title css-1eepp70"
                    >
                      项目管理权限
                    </h1>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-checkbox-group css-svmyig"
                                id="projectManagementPermission"
                              >
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700001"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    创建项目
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700003"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    数据源管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700010"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    成员管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700015"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    审批流程管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="20100"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    修改项目
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="20150"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    删除项目
                                  </span>
                                </label>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <h1
                      class="ant-typography member-form-sub-title css-1eepp70"
                    >
                      项目操作权限
                    </h1>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                class="ant-btn ant-btn-default member-form-add-button basic-button-wrapper css-9l31jd"
                                type="button"
                              >
                                <span
                                  class="ant-btn-icon"
                                >
                                  <svg
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7 13.667A6.667 6.667 0 1 1 7 .334a6.667 6.667 0 0 1 0 13.333m-.667-7.334H3.668v1.334h2.667v2.666h1.333V7.667h2.667V6.333H7.667V3.667H6.334z"
                                      fill="#4583FF"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  添加项目操作权限
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`base/Member/Drawer/AddMemberGroup should send add member group request when click submit button with  both management permissions and roles  1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-i0wf7l"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  添加成员组
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="name"
                        title="成员组名"
                      >
                        成员组名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input ant-input-status-success basic-input-wrapper css-1pd1cd5"
                            id="name"
                            placeholder="请输入成员组名"
                            type="text"
                            value="testGroup"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item ant-form-item-has-success"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="userUids"
                        title="用户名"
                      >
                        用户名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-show-arrow ant-select-open ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <div
                                class="ant-select-selection-overflow"
                              >
                                <div
                                  class="ant-select-selection-overflow-item"
                                  style="opacity: 1;"
                                >
                                  <span
                                    class="ant-select-selection-item"
                                    title="test"
                                  >
                                    <span
                                      class="ant-select-selection-item-content"
                                    >
                                      test
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-selection-item-remove"
                                      style="user-select: none;"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="close"
                                        class="anticon anticon-close"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="close"
                                          fill="currentColor"
                                          fill-rule="evenodd"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="ant-select-selection-overflow-item"
                                  style="opacity: 1;"
                                >
                                  <span
                                    class="ant-select-selection-item"
                                    title="test666"
                                  >
                                    <span
                                      class="ant-select-selection-item-content"
                                    >
                                      test666
                                    </span>
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-selection-item-remove"
                                      style="user-select: none;"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="close"
                                        class="anticon anticon-close"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="close"
                                          fill="currentColor"
                                          fill-rule="evenodd"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </span>
                                </div>
                                <div
                                  class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                                  style="opacity: 1;"
                                >
                                  <div
                                    class="ant-select-selection-search"
                                    style="width: 0px;"
                                  >
                                    <input
                                      aria-activedescendant="userUids_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="userUids_list"
                                      aria-expanded="true"
                                      aria-haspopup="listbox"
                                      aria-owns="userUids_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="userUids"
                                      role="combobox"
                                      style=""
                                      type="search"
                                      value=""
                                    />
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-selection-search-mirror"
                                    >
                                       
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="search"
                                class="anticon anticon-search ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="search"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <h1
                  class="ant-typography member-form-sub-title css-1eepp70"
                >
                  管理员设置
                </h1>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-form-item-label"
                    >
                      <label
                        class=""
                        for="isProjectAdmin"
                        title="是否为项目管理员"
                      >
                        是否为项目管理员
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            aria-checked="false"
                            class="ant-switch basic-switch-wrapper css-g6dhbn"
                            id="isProjectAdmin"
                            role="switch"
                            type="button"
                          >
                            <div
                              class="ant-switch-handle"
                            />
                            <span
                              class="ant-switch-inner"
                            >
                              <span
                                class="ant-switch-inner-checked"
                              />
                              <span
                                class="ant-switch-inner-unchecked"
                              />
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-spin-nested-loading"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <h1
                      class="ant-typography member-form-sub-title css-1eepp70"
                    >
                      项目管理权限
                    </h1>
                    <div
                      class="ant-form-item ant-form-item-has-success"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <div
                                class="ant-checkbox-group css-svmyig"
                                id="projectManagementPermission"
                              >
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700001"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    创建项目
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox ant-checkbox-checked"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700003"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    数据源管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox ant-checkbox-checked"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700010"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    成员管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="700015"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    审批流程管理
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="20100"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    修改项目
                                  </span>
                                </label>
                                <label
                                  class="ant-checkbox-wrapper ant-checkbox-wrapper-in-form-item ant-checkbox-group-item"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value="20150"
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                  <span>
                                    删除项目
                                  </span>
                                </label>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <h1
                      class="ant-typography member-form-sub-title css-1eepp70"
                    >
                      项目操作权限
                    </h1>
                    <div
                      class="ant-row css-cubq3u"
                    >
                      <div
                        class="ant-col ant-col-12"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class="ant-form-item-required"
                                for="roles_0_range_uids"
                                title="操作范围"
                              >
                                操作范围
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    aria-required="true"
                                    class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                                  >
                                    <div
                                      class="ant-select-selector"
                                    >
                                      <div
                                        class="ant-select-selection-overflow"
                                      >
                                        <div
                                          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                                          style="opacity: 1;"
                                        >
                                          <div
                                            class="ant-select-selection-search"
                                            style="width: 0px;"
                                          >
                                            <input
                                              aria-activedescendant="roles_0_range_uids_list_0"
                                              aria-autocomplete="list"
                                              aria-controls="roles_0_range_uids_list"
                                              aria-expanded="false"
                                              aria-haspopup="listbox"
                                              aria-owns="roles_0_range_uids_list"
                                              aria-required="true"
                                              autocomplete="off"
                                              class="ant-select-selection-search-input"
                                              id="roles_0_range_uids"
                                              readonly=""
                                              role="combobox"
                                              style="opacity: 0;"
                                              type="search"
                                              unselectable="on"
                                              value=""
                                            />
                                            <span
                                              aria-hidden="true"
                                              class="ant-select-selection-search-mirror"
                                            >
                                               
                                            </span>
                                          </div>
                                        </div>
                                      </div>
                                      <span
                                        class="ant-select-selection-placeholder"
                                      >
                                        请选择操作范围
                                      </span>
                                    </div>
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-arrow"
                                      style="user-select: none;"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="down"
                                        class="anticon anticon-down ant-select-suffix"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-8 ant-col-offset-1"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class="ant-form-item-required"
                                for="roles_0_role_uid"
                                title="项目角色"
                              >
                                项目角色
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <div
                                    aria-required="true"
                                    class="ant-select ant-select-in-form-item basic-select-wrapper css-x5nat1 ant-select-single ant-select-show-arrow ant-select-show-search"
                                  >
                                    <div
                                      class="ant-select-selector"
                                    >
                                      <span
                                        class="ant-select-selection-search"
                                      >
                                        <input
                                          aria-activedescendant="roles_0_role_uid_list_0"
                                          aria-autocomplete="list"
                                          aria-controls="roles_0_role_uid_list"
                                          aria-expanded="false"
                                          aria-haspopup="listbox"
                                          aria-owns="roles_0_role_uid_list"
                                          aria-required="true"
                                          autocomplete="off"
                                          class="ant-select-selection-search-input"
                                          id="roles_0_role_uid"
                                          role="combobox"
                                          type="search"
                                          value=""
                                        />
                                      </span>
                                      <span
                                        class="ant-select-selection-placeholder"
                                      >
                                        请选择项目角色
                                      </span>
                                    </div>
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-arrow"
                                      style="user-select: none;"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="down"
                                        class="anticon anticon-down ant-select-suffix"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-col ant-col-0"
                      >
                        <input
                          class="ant-input basic-input-wrapper css-1pd1cd5"
                          id="roles_0_op_range_type"
                          placeholder="请输入{{name}}"
                          type="text"
                          value="db_service"
                        />
                      </div>
                      <div
                        class="ant-col ant-col-1 ant-col-offset-1"
                      >
                        <div
                          class="ant-form-item"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-label"
                            >
                              <label
                                class="ant-form-item-no-colon"
                                title=" "
                              >
                                 
                              </label>
                            </div>
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    class="ant-btn ant-btn-default ant-btn-icon-only basic-button-wrapper css-wj94f1"
                                    type="button"
                                  >
                                    <span
                                      class="ant-btn-icon"
                                    >
                                      <svg
                                        height="16"
                                        viewBox="0 0 18 18"
                                        width="16"
                                        xmlns="http://www.w3.org/2000/svg"
                                      >
                                        <path
                                          d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M5.25 8.25v1.5h7.5v-1.5z"
                                          fill="#F66074"
                                        />
                                      </svg>
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="ant-form-item"
                    >
                      <div
                        class="ant-row ant-form-item-row"
                      >
                        <div
                          class="ant-col ant-form-item-control"
                        >
                          <div
                            class="ant-form-item-control-input"
                          >
                            <div
                              class="ant-form-item-control-input-content"
                            >
                              <button
                                class="ant-btn ant-btn-default member-form-add-button basic-button-wrapper css-9l31jd"
                                type="button"
                              >
                                <span
                                  class="ant-btn-icon"
                                >
                                  <svg
                                    height="16"
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7 13.667A6.667 6.667 0 1 1 7 .334a6.667 6.667 0 0 1 0 13.333m-.667-7.334H3.668v1.334h2.667v2.666h1.333V7.667h2.667V6.333H7.667V3.667H6.334z"
                                      fill="#4583FF"
                                    />
                                  </svg>
                                </span>
                                <span>
                                  添加项目操作权限
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-10ae2zl"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: 0; width: 0px;"
    >
      <div>
        <div
          id="userUids_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="test"
            aria-selected="true"
            id="userUids_list_0"
            role="option"
          >
            11132422
          </div>
          <div
            aria-label="test666"
            aria-selected="true"
            id="userUids_list_1"
            role="option"
          >
            1647895752866795520
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option select-option-whitespace-pre ant-select-item-option-active ant-select-item-option-selected"
                  label="test"
                  title="test"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    test
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="check"
                      class="anticon anticon-check"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="check"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option select-option-whitespace-pre ant-select-item-option-selected"
                  label="test666"
                  title="test666"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    test666
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="check"
                      class="anticon anticon-check"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="check"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option select-option-whitespace-pre"
                  label="admin"
                  title="admin"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    admin
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option select-option-whitespace-pre"
                  label="global-view"
                  title="global-view"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    global-view
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option select-option-whitespace-pre"
                  label="global-management"
                  title="global-management"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    global-management
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
